# engnotes

./: errors.csv  instructions.MD  typstemp
EK210 - Engineering Design/deskinator/: README.md  deskinator-parts-list.csv  deskinator-wiring.fzz  deskinator-wiring_bom.html  deskinator-wiring_bom_csv.csv  deskinator-wiring_bom_csv.numbers  deskinator-wiring_netlist.xml  pyproject.toml  robot-morph-graph.numbers
EK210 - Engineering Design/deskinator/code/: README.md  __init__.py  config.py  deskinator-slam-plan.md  main.py  outline.MD  pyproject.toml
EK210 - Engineering Design/deskinator/code/control/: __init__.py  fsm.py  limits.py  motion.py
EK210 - Engineering Design/deskinator/code/hw/: __init__.py  apds9960.py  bno085.py  gpio.py  i2c.py  stepper.py  tca9548a.py  vacuum.py
EK210 - Engineering Design/deskinator/code/planning/: __init__.py  coverage.py  (+1 more)
EK210 - Engineering Design/deskinator/deskinator/: __init__.py  config.py
EK210 - Engineering Design/deskinator/deskinator-prints-v1/: body.stl  sensor-mount.dxf  sensors-cut-remade.dxf  tray-bottom-print.stl  tray.dxf
EK210 - Engineering Design/deskinator/deskinator-prints-v3/: new-encolsure - left-sensor.stl  new-encolsure-bottom.stl  new-encolsure-right-sensor.stl  new-encolsure-top.stl  tray-fit.3mf
EK210 - Engineering Design/deskinator/videos/: IMG_9397.MOV  IMG_9398.mov  IMG_9399.mov  IMG_9400.mov  IMG_9401.mov  IMG_9402.mov  IMG_9403.mov  IMG_9404.mov  IMG_9406.MOV  IMG_9411.MOV  IMG_9413.MOV  IMG_9414.MOV  IMG_9418.MOV  IMG_9419.MOV  IMG_9420.mov  IMG_9421.mov  IMG_9422.mov  IMG_9423.mov  IMG_9424.mov
(+333 files in other folders)
